examples: Cargo.toml now use crates.io version of the driver
Examples previously used a local instance of the driver; now
they reference the version published on crates.io.

Signed-off-by: Gioele Fiorenza <gioele.fiorenza2000@gmail.com>

--- a/examples/fsm_fourd_stm32f401re/Cargo.toml
+++ b/examples/fsm_fourd_stm32f401re/Cargo.toml
@@ -11,11 +11,7 @@ cortex-m-rt = "0.7.3"
 cortex-m-semihosting = "0.5.0"
 panic-halt = "0.2.0"
 st-mems-reg-config-conv = { version = "1.0.0" }
-
-[dependencies.lsm6dsv80x-rs]
-path = "../../"
-default-features = false
-
+lsm6dsv80x-rs = "1.0.0"
 
 [build-dependencies]
 st-mems-reg-config-conv = { version = "1.0.0", features = ["std"] }
