--- a/examples/mlc_gym_stm32f401re_embassy/Cargo.toml
+++ b/examples/mlc_gym_stm32f401re_embassy/Cargo.toml
@@ -19,10 +19,7 @@ embassy-futures = "0.1.0"
 embedded-io = "0.6.0" 
 embedded-io-async = "0.6.1"
 st-mems-reg-config-conv = { version = "1.0.0" }
-
-[dependencies.lsm6dsv80x-rs]
-path = "../../"
-default-features = false
+lsm6dsv80x-rs = "1.0.0"
 
 [dependencies.panic-probe]
 version = "0.3"
