--- a/examples/read_fifo_stm32f401re_embassy/Cargo.toml
+++ b/examples/read_fifo_stm32f401re_embassy/Cargo.toml
@@ -18,10 +18,7 @@ defmt-rtt = "0.4"
 embassy-futures = "0.1.0"
 embedded-io = "0.6.0" 
 embedded-io-async = "0.6.1"
-
-[dependencies.lsm6dsv80x-rs]
-path = "../../"
-default-features = false
+lsm6dsv80x-rs = "1.0.0"
 
 [dependencies.panic-probe]
 version = "0.3"
